fix ta alignment again... UGH

--- a/app/assets/stylesheets/layout/_layout.scss
+++ b/app/assets/stylesheets/layout/_layout.scss
@@ -13,7 +13,7 @@ article {
 
   &.ta_list {
     width: 29%;
-    &:nth-child(3n+1) {
+    &:nth-child(3n+2) {
       clear: both;
     }
   }
